2008-04-14  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile (DIST_ONLY_SUBDIRS): Remove.
	(MONO_WEB, MONO_POSIX, MONO_SYMWRITER): Remove.  Inline	definitions.

2008-04-13  Jb Evain  <jbevain@novell.com>

	* Makefile: update the 2.1 assemblies.
	Merged from the Moonlight 2 branch.

2008-03-04  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Added System.Data.Linq
	
2008-03-03  Marek Habersack  <mhabersack@novell.com>

	* Makefile: Move Mono.Web back to the common section.

2008-03-03  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Moved Mono.Web to 2.0 section.

2008-02-17  Raja R Harinath  <harinath@hurrynot.org>

	* Makefile (net_3_5_dirs): Remove System.Xml.Linq, now that it's
	built in the 2.0 profile.

2008-02-11  Andrew Jorgensen  <ajorgensen@novell.com>

	* Makefile: build System.Xml.Linq in the 2.0 profile

2007-12-19  Jb Evain  <jbevain@novell.com>

	* Makefile: include MicrosoftAjaxLibrary/License.htm
	in the dist.

2007-12-17  Jb Evain  <jbevain@novell.com>

	* Makefile: build Mono.Cecil only in the default profile.

2007-12-08  Marek Habersack  <mhabersack@novell.com>

	* Makefile (common_dirs): Mono.Data.Sqlite must be built before
	System.Web.

2007-12-03  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Build 3.5 assemblies under NET_3_5 profile.
	
2007-11-29  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: added System.Xml.Linq.

2007-11-13  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: In 2.0 System.EnterpriseServices.dll depends on
	  System.Transactions.dll.

2007-10-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: In 2.0 System.Design.dll has cyclic dep on
	  System.Drawing.Design.dll.

2007-09-11  Marek Habersack  <mhabersack@novell.com>

	* Makefile (net_2_0_dirs): added the System.Web.Extensions.Design
	directory.

2007-08-27  Jb Evain  <jbevain@novell.com>

	* Makefile: integrate Mono.Cecil.Mdb in the build.

2007-08-11  Andreia Gaita  <avidigal@novell.com>
